update the SecurityConfiguration